[package]
name = "chord-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.27", features = ["full"] }
futures = "0.3"
rand = "0.8"
serde = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
