[package]
name = "chord-dht"
version = "0.1.0"
edition = "2021"
authors = ["DCsunset"]
description = "A DHT implementation in Rust based on Chord with high peformance and data replication."
readme = "README.md"
repository = "https://github.com/DCsunset/chord-dht"
license = "AGPL-3.0"
categories = ["database-implementations", "command-line-utilities"]
keywords = ["chord", "dht"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.27", features = ["full"] }
futures = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
serde = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
clap = { version = "3.1", features = ["derive"] }
inquire = "0.3.0-alpha.2"

[[bin]]
name = "chord-dht-server"
path = "src/server-bin.rs"

[[bin]]
name = "chord-dht-client"
path = "src/client-bin.rs"
